# skram

./: CMakeLists.txt  LICENSE  README.md  package.xml  skram.asd
launch/: map.launch  world.launch
maps/: map-2018-12-skram.pgm  map-2018-12-skram.yaml
src/: execution-context.lisp  location-knowledge.lisp  object-knowledge.lisp  package.lisp  scene-generation-utils.lisp  skram-action-designators.lisp  skram-actions.lisp  skram-argument-parse.lisp  spl2desig.lisp  tests.lisp
