<package format="2">
  <name>skram</name>
  <version>0.0.1</version>
  <description>Higher-level, schematic CRAM plans and mappings between them and semantic parses.</description>
  <author email="mpomarlan@yahoo.co.uk">Mihai Pomarlan</author>

  <maintainer email="mpomarlan@yahoo.co.uk">Mihai Pomarlan</maintainer>

  <license>BSD</license>  
  <url type="website">https://github.com/mpomarlan/skram</url>
  <url type="bugtracker">https://github.com/mpomarlan/skram/issues</url>
  <url type="repository">https://github.com/mpomarlan/skram</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslisp_utilities</depend>
  <depend>cl_transforms</depend>
  <depend>cl_transforms_stamped</depend>
  <depend>cl_tf</depend>
  <depend>cram_tf</depend>
  <depend>cram_language</depend>
  <depend>cram_executive</depend>
  <depend>cram_designators</depend>
  <depend>cram_prolog</depend>
  <depend>cram_projection</depend>
  <depend>cram_occasions_events</depend>
  <depend>cram_common_failures</depend>
  <depend>cram_physics_utils</depend>
  <depend>cl_bullet</depend>
  <depend>cram_bullet_reasoning</depend>
  <depend>cram_bullet_reasoning_belief_state</depend>
  <depend>cram_bullet_reasoning_utilities</depend>
  <depend>cram_btr_visibility_costmap</depend>
  <depend>cram_btr_spatial_relations_costmap</depend>
  <depend>cram_pr2_projection</depend>
  <depend>cram_pr2_projection_reasoning</depend>
  <!-- <depend>cram_semantic_map_costmap</depend> -->
  <depend>cram_robot_pose_gaussian_costmap</depend>
  <depend>cram_occupancy_grid_costmap</depend>
  <depend>cram_location_costmap</depend>
  <depend>cram_mobile_pick_place_plans</depend>
  <depend>cram_knowrob_pick_place</depend>
  <depend>cram_cloud_logger</depend>
  <depend>cram_pr2_description</depend>
  <depend>cram_pr2_fetch_deliver_plans</depend>
  <depend>cram_pr2_environment_manipulation</depend>

  <!-- launch file -->
  <exec_depend>iai_maps</exec_depend>
  <exec_depend>iai_kitchen</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>pr2_description</exec_depend>
  <exec_depend>pr2_arm_kinematics</exec_depend>
  <exec_depend>map_server</exec_depend>
</package>
